static/core/css/wikivinci.css
/* ... */
#page-content > .container .toprow p.sub-title {
	margin-top:20px;
	font-size:17px;	
}

#page-content > .container .toprow p#personalize {
	margin-top:11px;
	text-align:right;
}

#page-content > .container .toprow p#personalize a > i.fa {
	margin-right:7px;
}

#page-content > .container .toprow span.link-type {
	margin-left:10px;
	padding:4px;
	font-weight:700;
	text-transform:uppercase;
	font-size:13px;
	background-color:#FFAB47;
	border:1px solid #FF9A21;
	border-radius:4px;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	color:#FFF;
}

#page-content > .container .toprow input,
#page-content > .container .toprow select {
	float:right;
	width:200px;
}

#page-content > .container .toprow select.filter-on {
	border:2px solid #F2B000;
}

#page-content > .container .toprow .votes-contain {
	display:inline-block;
	margin-right:20px;
	width:46px;
	padding:3px 8px;
	border:1px solid #E5902A;
	border-radius:4px;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
	background-color:#FFAB47;
	color:#FFF;
}

#page-content > .container .toprow .votes-contain > i,
#page-content > .container .toprow .votes-contain > span {
	display:block;
	margin-top:3px;
	text-align:center;
}

#page-content > .container .toprow .votes-contain span.count {
	font-size:14px;
	font-weight:700;
}

#page-content #topics #topics-list {
	padding-top:15px;
	border-top:1px solid #D7D5D5;
	margin-top:15px;
}

#page-content #topics input#topic-search {
	border-radius:13px;
	width:100%;
	max-width:300px;
	font-size:14px;
	padding-left:14px;
	margin-top:15px;
}

#page-content #topics #topics-list > a {
	float:left;
	padding:10px;
	font-size:14px;
	border-radius:4px;
	color:#3c3e43;
	font-size:14px;
	border-radius:4px;
	margin:0px 20px 20px 0px;
	border:1px solid #D7D5D5;
	width:23%;
	text-decoration:none;	
}

#page-content #topics #topics-list > a:nth-child(4n+4) {
	margin-right:0px;
}

#page-content #topics #topics-list > a > span.count {
	margin-left:2px;
	font-weight:400;
	font-size:11px;
}

#page-content #all-posts-filters {
	padding-top:40px;
	float:left;
	width:20%;
}

#page-content #all-posts-filters input#search {
	border-radius:0px;
	-moz-border-radius:0px;
	-webkit-border-radius:0px;	
}

#page-content #all-posts-filters .filter {
	margin-top:30px;
}

#page-content #all-posts-filters .filter > h3 {
	font-size:18px;
	font-weight:700;
	margin-bottom:15px;
}

#page-content #all-posts-filters .filter a.active {
	color:#6a6a6a;
	text-decoration:none;
}

#page-content #all-posts-filters .filter input[type='checkbox'] {
	margin-right:5px;
}

#page-content .posts {
	padding-top:40px;
}

#page-content #all-posts.posts {
	float:right;
	width:72%;
}

#page-content .posts #day-group {
	text-transform:capitalize;
	font-size:18px;
	font-weight:700;
	margin-bottom:35px;
}

#page-content .posts #day-group > span {
	font-size:15px;
	margin-left:4px;
}

#page-content .posts #sorry {
	font-size:17px;
	max-width:800px;	
}

#page-content .posts .post {
	overflow:auto;
	min-height:80px;
	margin-bottom:50px;
	padding-bottom:10px;	
}

#page-content #all-posts.posts .post {
	margin-bottom:25px;
}

#page-content .posts .post > div {
	float:left;
}

#page-content .posts .post > div.title-contain {
	width:70%;
	margin-left:30px;
}

#page-content .posts .post > div.title-contain h2 {
	font-size:19px;
	margin-bottom:5px;
}

#page-content .posts .post > div.title-contain p {
	font-size:13px;
}

#page-content .posts .post > div.title-contain span.timestamp {
	display:inline-block;
	font-size:12px;
	margin-top:12px;
}

#page-content .posts .post > div.title-contain span.skill-level {
	display:inline-block;
	font-size:12px;
	margin-right:8px;
}

#page-content .posts .post > div.title-contain span.skill-level > span {
/*	padding:3px;
	font-weight:700;
	color:#FFF !important;
	margin-left:4px;
	border-radius:4px;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;*/
	text-transform:lowercase;
}

/*#page-content .posts .post > div.title-contain span.skill-level > span.BEGINNER {
	background-color:#303EC3;
}

#page-content .posts .post > div.title-contain span.skill-level > span.INTERMEDIATE {
	background-color:#076699;	
}

#page-content .posts .post > div.title-contain span.skill-level > span.ADVANCED {
	background-color:#4E5BD1;	
}*/

#page-content .posts .post > div.votes-contain {
	width:46px;
	padding:3px 8px;
	border:1px solid #ECE4E4;
	border-radius:4px;
	-moz-border-radius:4px;
	-webkit-border-radius:4px;
}

#page-content .posts .post .votes-contain > i,
#page-content .posts .post .votes-contain > span {
	display:block;
	margin-top:3px;
	text-align:center;
}

#page-content .posts .post .votes-contain span.count {
	font-size:14px;
	font-weight:700;
}

#page-content .posts .post .post-info-contain {
	float:right; /*overwrite*/
	font-size:20px;
	line-height:70px;
}

#page-content .posts .post .post-info-contain i.fa {
	margin-right:5px;
}

#page-content .posts .post .owner-contain {
	float:right; /*overwrite*/
	line-height:70px;
	margin-left:30px;
}

#page-content .posts .post .owner-contain img.owner {
	width:40px;
	height:40px;
	border:1px solid #A6A6A6;
	border-radius:20px;
	-webkit-border-radius:20px;
	-moz-border-radius:20px;	
}

#page-content #single-post span.author-mark {
	padding:4px;
	position:absolute;
	background-color:#FFF;
	border-radius:50%;
	color:#FF6A47;
	border:1px solid #E7E7E7;
	box-shadow:1px 1px 1px rgba(26, 26, 26, 0.28);
	display:block;
	width:25px;
	height:25px;
	line-height:14px;
	font-weight:700;
	font-size:15px;
	text-align:center;
	text-transform:uppercase;	
}

#page-content #single-post #left-column {
	float:left;
	width:65%;
	padding-bottom:100px;
}

#page-content #single-post #left-column .toprow h2 {
	vertical-align:top;
}

#page-content #single-post #left-column .toprow h2 i.fa {
	font-size:0.7em;
	margin-left:6px;
}

#page-content #single-post #right-column {
	float:right;
	width:30%;
}

#page-content #single-post #left-column p.post-descr {
	font-size:17px;
}
/* ... */

